[project]
name = "nomollm-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.38.2",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
include = ["nomollm_agent*"]
